--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -244,7 +244,7 @@ select.form_input{
   border-top: solid 2px #eee;
   padding: 15px 0;
   margin-top: 25px;
-  @include transition(0.3s);
+  @include transition(1s);
 
   .btn{
     border-radius: 0;
@@ -257,16 +257,21 @@ select.form_input{
     background-color: darken($primary-color, 10%);
   }
 }
-.form-footer.fixed{
+.form-footer.sticky{
   position: fixed;
   left: 0;
-  top: 0;
+  top: -100%;
   width: 100%;
   margin: 0;
   padding: 10px 15px;
   box-shadow: 0 5px 5px rgba(#000, 0.1);
   background-color: #fff;
+  opacity: 0;
   text-align: center;
+}
+.form-footer.sticky.fixed{
+  top: 0;
+  opacity: 1;
 }
 .image-preview {
   width: 100%;
