--- a/css/_page-etablissement.scss
+++ b/css/_page-etablissement.scss
@@ -89,7 +89,8 @@
       li{
         display: inline-block;
       }
-      a{
+      a,
+      span{
         display: inline-block;
         vertical-align: top;
         padding: 2px 10px;
@@ -99,7 +100,8 @@
         cursor: pointer;
         @include transition(0.3s);
       }
-      a:hover{
+      a:hover,
+      span:hover{
         background-color: $primary-color;
         border-color: $primary-color;
         color: #fff;
@@ -239,7 +241,6 @@
 }
 
 span.indicateur_ouverture{
-  float: right;
   display: inline-block;
   font-weight: normal;
   font-size: 12px;
@@ -253,7 +254,6 @@ span.indicateur_ouverture.ouvert{
   color: green;
 }
 span.indicateur_distance{
-  float: right;
   display: inline-block;
   font-size: 12px;
   padding: 5px 10px;
