--- a/css/_admin.scss
+++ b/css/_admin.scss
@@ -329,6 +329,70 @@ select.form_input{
   }
 }
 
+.dashboard{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  .dashboard-row{
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    .dashboard-item{
+      flex: 1;
+      padding: 15px;
+      margin: 5px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: flex-start;
+      overflow: hidden;
+
+      .fa{
+        font-size: 40px;
+        color: #fff;
+        flex: 1;
+        text-align: center;
+        opacity: 0.8;
+        @include transition(0.3s);
+      }
+
+      .label{
+        text-align: left;
+        font-weight: normal;
+        text-transform: capitalize;
+        opacity: 0.8;
+        flex: 3;
+        border-left: solid 1px #fff;
+        border-radius: 0;
+        margin-left: 15px;
+        .counter{
+          font-size: 35px;
+          font-weight: bold;
+        }
+      }
+    }
+    .dashboard-item:hover{
+      .fa{
+        transform: scale(1.4);
+        transform-origin: center center;
+      }
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .dashboard{
+    display: block;
+  }
+}
+
 @media (max-width: 767px) {
   .body.admin{
     display: inherit;
@@ -362,5 +426,13 @@ select.form_input{
     color: #fff;
     font-size: 14px;
     background-color: #2c2c2c;
+  }
+}
+
+@media (max-width: 480px){
+  .dashboard{
+    .dashboard-row{
+      display: block;
+    }
   }
 }
