--- a/css/style.css
+++ b/css/style.css
@@ -1697,6 +1697,57 @@ select.form_input {
     .option-fields .plus .fa {
       display: block; }
 
+.dashboard {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start; }
+  .dashboard .dashboard-row {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start; }
+    .dashboard .dashboard-row .dashboard-item {
+      flex: 1;
+      padding: 15px;
+      margin: 5px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: flex-start;
+      overflow: hidden; }
+      .dashboard .dashboard-row .dashboard-item .fa {
+        font-size: 40px;
+        color: #fff;
+        flex: 1;
+        text-align: center;
+        opacity: 0.8;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+      .dashboard .dashboard-row .dashboard-item .label {
+        text-align: left;
+        font-weight: normal;
+        text-transform: capitalize;
+        opacity: 0.8;
+        flex: 3;
+        border-left: solid 1px #fff;
+        border-radius: 0;
+        margin-left: 15px; }
+        .dashboard .dashboard-row .dashboard-item .label .counter {
+          font-size: 35px;
+          font-weight: bold; }
+    .dashboard .dashboard-row .dashboard-item:hover .fa {
+      transform: scale(1.4);
+      transform-origin: center center; }
+
+@media (max-width: 991px) {
+  .dashboard {
+    display: block; } }
 @media (max-width: 767px) {
   .body.admin {
     display: inherit; }
@@ -1722,6 +1773,9 @@ select.form_input {
     color: #fff;
     font-size: 14px;
     background-color: #2c2c2c; } }
+@media (max-width: 480px) {
+  .dashboard .dashboard-row {
+    display: block; } }
 .custom-table {
   padding: 0 15px; }
   .custom-table .thead {
