--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -39,7 +39,11 @@
     }
   }
 }
-
+@media (max-width: 991px){
+  .col-sm-6.text-right{
+    text-align: left;
+  }
+}
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar.fixed{
     form{
