--- a/layout/email-template.html
+++ b/layout/email-template.html
@@ -24,7 +24,7 @@
                     <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                             <td style="padding: 15px 15px 20px;">
-                                <img src="http://localhost/gabways/img/logo.png" height="60" alt="logo GabWays">
+                                <img src="http://integration.gabways.com/img/logo.png" height="60" alt="logo GabWays">
                             </td>
                         </tr>
                     </table>
