--- a/layout/email-template.html
+++ b/layout/email-template.html
@@ -9,51 +9,49 @@
             font-family: "Roboto", Arial, sans-serif;
         }
 
-        @media screen and (max-width: 630px) {
-
+        @media screen and (max-width: 600px) {
+            #main{
+                width: 100% !important;
+            }
         }
     </style>
 </head>
 
 <body style="margin: 0; padding: 0;">
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<table id="main" align="center" border="0" cellpadding="0" cellspacing="0" width="600" bgcolor="#fff" style="color: #393939">
     <tr>
-        <td><table align="center" border="0" cellpadding="0" cellspacing="0" width="600" bgcolor="#fff" style="color: #393939">
-            <tr>
-                <td>
-                    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
-                        <tr>
-                            <td style="padding: 15px 15px 20px;">
-                                <img src="http://integration.gabways.com/img/logo.png" height="60" alt="logo GabWays">
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
+        <td>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                <tr>
+                    <td style="padding: 15px 15px 20px;">
+                        <img src="http://integration.gabways.com/img/logo.png" height="60" alt="logo GabWays">
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
 
-            <tr>
-                <td style="padding: 15px">
-                    <h1 style="font-size: 24px ;margin: 0 0 0 0;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-                </td>
-            </tr>
-            <tr>
-                <td style="font-size: 16px; line-height: 20px; padding: 15px 15px 30px 15px;">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut error harum impedit repudiandae sapiente sed velit? Accusantium cumque dolor, dolorem doloremque, exercitationem harum iusto labore laudantium quae sit totam ut?
-                    <br>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, amet assumenda deleniti doloremque expedita fuga, laudantium magnam minima modi, nam nobis numquam obcaecati quam quia recusandae repellat rerum. Facilis, nesciunt.
-                    <div>
-                        <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #af1e27; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
-                    </div>
+    <tr>
+        <td style="padding: 15px">
+            <h1 style="font-size: 24px ;margin: 0 0 0 0;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+        </td>
+    </tr>
+    <tr>
+        <td style="font-size: 16px; line-height: 20px; padding: 15px 15px 30px 15px;">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut error harum impedit repudiandae sapiente sed velit? Accusantium cumque dolor, dolorem doloremque, exercitationem harum iusto labore laudantium quae sit totam ut?
+            <br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, amet assumenda deleniti doloremque expedita fuga, laudantium magnam minima modi, nam nobis numquam obcaecati quam quia recusandae repellat rerum. Facilis, nesciunt.
+            <div>
+                <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #af1e27; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
+            </div>
 
-                </td>
-            </tr>
+        </td>
+    </tr>
 
-            <tr>
-                <td style="border-top: solid 1px #eee">
+    <tr>
+        <td style="border-top: solid 1px #eee">
 
-                </td>
-            </tr>
-        </table></td>
+        </td>
     </tr>
 </table>
 </body>
