--- a/layout/email-template.html
+++ b/layout/email-template.html
@@ -49,8 +49,8 @@
     </tr>
 
     <tr>
-        <td style="border-top: solid 1px #eee">
-
+        <td style="border-top: solid 1px #eee; font-size: 13px; padding: 15px 15px 15px 15px; color: #999">
+            &copy; <a href="#" style="text-decoration: none; color: inherit">Gabways</a> 2017
         </td>
     </tr>
 </table>
