--- a/layout/email-template.html
+++ b/layout/email-template.html
@@ -37,13 +37,24 @@
         </td>
     </tr>
     <tr>
-        <td style="font-size: 16px; line-height: 20px; padding: 15px 15px 30px 15px;">
+        <td style="font-size: 14px; line-height: 20px; padding: 15px 15px 30px 15px;">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut error harum impedit repudiandae sapiente sed velit? Accusantium cumque dolor, dolorem doloremque, exercitationem harum iusto labore laudantium quae sit totam ut?
             <br>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, amet assumenda deleniti doloremque expedita fuga, laudantium magnam minima modi, nam nobis numquam obcaecati quam quia recusandae repellat rerum. Facilis, nesciunt.
-            <div>
-                <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #af1e27; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
-            </div>
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
+                <tr>
+                    <td valign="top" width="50%" style="padding: 15px 15px 15px 15px">
+                        <h4 style="color: #af1e27">Colonne 1</h4>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        <br>
+                        <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #af1e27; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
+                    </td>
+                    <td valign="top" width="50%" style="padding: 15px 15px 15px 15px">
+                        <h4 style="color: #af1e27">Colonne 2</h4>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi cupiditate dolorem dolores, ex facilis hic inventore, ipsa itaque nesciunt, nihil nisi non placeat possimus quasi qui repellat totam unde voluptatum!
+                    </td>
+                </tr>
+            </table>
 
         </td>
     </tr>
