--- a/layout/email-template.html
+++ b/layout/email-template.html
@@ -43,13 +43,13 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, amet assumenda deleniti doloremque expedita fuga, laudantium magnam minima modi, nam nobis numquam obcaecati quam quia recusandae repellat rerum. Facilis, nesciunt.
             <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
-                    <td valign="top" width="50%" style="padding: 15px 15px 15px 15px">
+                    <td valign="top" width="50%" style="padding: 15px 15px 15px 0">
                         <h3 style="color: #af1e27">Colonne 1</h3>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         <br>
                         <a href="#" style="display: inline-block; width: auto; margin: 10px auto 10px auto; padding: 10px 15px 10px 15px; background-color: #af1e27; color: #fff; text-decoration: none; font-weight: bold">Bouton simple</a>
                     </td>
-                    <td valign="top" width="50%" style="padding: 15px 15px 15px 15px">
+                    <td valign="top" width="50%" style="padding: 15px 0 15px 15px">
                         <h3 style="color: #af1e27">Colonne 2</h3>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi cupiditate dolorem dolores, ex facilis hic inventore, ipsa itaque nesciunt, nihil nisi non placeat possimus quasi qui repellat totam unde voluptatum!
                     </td>
