--- a/layout/email-template.html
+++ b/layout/email-template.html
@@ -61,7 +61,21 @@
 
     <tr>
         <td style="border-top: solid 1px #eee; font-size: 13px; padding: 15px 15px 15px 15px; color: #999">
-            &copy; <a href="#" style="text-decoration: none; color: inherit">Gabways</a> 2017
+            <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                <tr>
+                    <td>
+                        &copy; <a href="#" style="text-decoration: none; color: inherit">Gabways</a> 2017
+                    </td>
+
+                    <td style="text-align: right">
+                        <a href="https://facebook.com" style="padding: 10px"><img src="http://integration.gabways.com/img/social/facebook.png" width="15" alt="facebook"></a>
+
+                        <a href="https://twitter.com" style="padding: 10px"><img src="http://integration.gabways.com/img/social/twitter.png" width="15" alt="facebook"></a>
+
+                        <a href="https://youtube.com" style="padding: 10px"><img src="http://integration.gabways.com/img/social/youtube.png" width="15" alt="facebook"></a>
+                    </td>
+                </tr>
+            </table>
         </td>
     </tr>
 </table>
